Fix jdk.incubator.vector